<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"

    android:orientation="vertical"
    tools:context="com.example.administrator.traing.activity.AccountActivity">

    <include layout="@layout/login_tools_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_15">

        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:contentDescription="@null" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/base"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/secondary_text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:cursorVisible="false"
            android:gravity="center_vertical"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="#dbdbdb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/base"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people_des"
            android:textColor="@color/secondary_text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_des"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:cursorVisible="false"
            android:gravity="center_vertical"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="18sp" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/hint_account" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/bg_edit_login_fill"
        android:text="登出"
        android:textColor="@color/icons"
        tools:ignore="HardcodedText" />

</LinearLayout>
