<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical"
    tools:context="com.example.administrator.traing.activity.LoginActivity">

    <include layout="@layout/login_tools_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginTop="20dp"
        android:background="@color/base"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_account_circle_black_24dp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLength="10"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:textSize="16sp" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:background="#dbdbdb" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:background="#dbdbdb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_lock_black_24dp" />

            <EditText
                android:id="@+id/et_pw"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="14"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_15"
        android:text="如果您有账号直接点击登录"
        android:textColor="@color/secondary_text" />


    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/bg_edit_login_fill"
        android:text="@string/register"
        android:textColor="@color/icons" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/bg_edit_login_fill"
        android:text="@string/login"
        android:textColor="@color/icons" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <LinearLayout
            android:id="@+id/ll_mix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0.6dp"
                android:layout_weight="1"
                android:background="#dbdbdb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                android:text="@string/mixLogin"
                android:textColor="@color/secondary_text" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.6dp"
                android:layout_weight="1"
                android:background="#dbdbdb" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/ll_mix"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/qq"
                android:contentDescription="@null" />

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/weixin"
                android:contentDescription="@null" />

        </LinearLayout>


    </RelativeLayout>


</LinearLayout>
