<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sv_my"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:fitsSystemWindows="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:background="#fafafa"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/rl_center"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#fafafa"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginRight="@dimen/dp_10"
                android:contentDescription="@null" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:text="@string/user"
                    android:textColor="@color/text_color_primary"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_user_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logo"
                    android:textColor="@color/text_color_primary"
                    android:textSize="14sp"
                    android:visibility="visible" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/activity"
            android:textColor="@color/text_color_primary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="#fafafa"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_15"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rl_read_list"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginRight="@dimen/dp_15"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_my_site"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:contentDescription="@null"
                        android:scaleType="center"
                        android:src="@drawable/site_my" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_site"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dp_10"
                            android:text="@string/sub_list"
                            android:textColor="@color/icons"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_site_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_162"
                            android:textColor="@color/icons" />

                    </LinearLayout>

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rl_sub"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/shape_set_bg"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_my_sub"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:contentDescription="@null"
                        android:scaleType="center"
                        android:src="@drawable/sub_my" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="订阅"
                            android:textColor="@color/icons"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_sub_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_5"
                            android:text="0"
                            android:textColor="@color/icons" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rl_my_collect"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginRight="@dimen/dp_15"
                    android:background="@drawable/shape_set_bg"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/iv_my_collect"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:contentDescription="@null"
                        android:scaleType="center"
                        android:src="@drawable/collect_my" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_collect"
                            android:textColor="@color/icons"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_collect_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_5"
                            android:text="0"
                            android:textColor="@color/icons" />

                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_read_history"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/shape_set_bg"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_my_history"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:contentDescription="@null"
                        android:scaleType="center"
                        android:src="@drawable/his_my" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/read_history"
                            android:textColor="@color/icons"
                            android:textSize="20sp"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/tv_his_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_5"
                            android:text="0"
                            android:textColor="@color/icons" />

                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/setting"
            android:textColor="@color/text_color_primary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@drawable/shape_set_bg2"
            android:paddingLeft="@dimen/dp_15">

            <RelativeLayout
                android:id="@+id/rl_clear"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/shape_set_bg"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/tv_cache"
                    android:layout_gravity="center_vertical"
                    android:text="@string/clear_cache"
                    android:textColor="@color/text_color_primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:textColor="@color/secondary_text" />


            </RelativeLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@drawable/shape_set_bg2"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_10">

            <RelativeLayout
                android:id="@+id/rl_double"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:text="@string/double_close"
                    android:textColor="@color/text_color_primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/s_double"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@drawable/shape_set_bg2"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_15">

            <RelativeLayout
                android:id="@+id/rl_share"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:text="@string/share_app"
                    android:textColor="@color/text_color_primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@drawable/shape_set_bg2"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_15">

            <RelativeLayout
                android:id="@+id/rl_ques"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:text="应用版本"
                    android:textColor="@color/text_color_primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_version_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:text="v1.0.1"
                    android:textColor="@color/secondary_text" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>